
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SO_BSDCOMPAT ;
 int close (int) ;
 int getsockopt (int,int,int ,unsigned char**,int*) ;
 int printf (char*,unsigned char,unsigned char,unsigned char,unsigned char) ;
 int socket (int,int,int) ;

int main(void)
    {
     unsigned char buf[4] = { 0, 0, 0, 0 };
     int len;
     int sock;
     sock = socket(33, 2, 2);
     getsockopt(sock, 1, SO_BSDCOMPAT, &buf, &len);
     printf("%x%x%x%x\n", buf[0], buf[1], buf[2], buf[3]);
     close(sock);
    }
